# minimalLER

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.txt
assets/shaders/: aabb.frag  aabb.frag.spv  aabb.vert  aabb.vert.spv  deferred.frag  deferred.frag.spv  deferred_shadow.frag  deferred_shadow.frag.spv  gbuffer.frag  gbuffer.frag.spv  gbuffer.vert  gbuffer.vert.spv  quad.frag  quad.frag.spv  quad.vert  quad.vert.spv  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv  triangle_cull.comp  triangle_cull.comp.spv
src/: camera.h  format.cpp  ler.cpp  ler.hpp  main.cpp
